--- a/CSS09디자인실습/style.css
+++ b/CSS09디자인실습/style.css
@@ -5,7 +5,11 @@ body , html{
     width: 100%;
     min-width: 320px;
 }
-
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 img{
     max-width: 100%;
     height: auto;
@@ -135,4 +139,72 @@ footer{
 .slider_list{
     padding: 0;
     margin: 0;;
+}
+
+.promd-innd > a> .hover{
+    width: 1oopx;
+    color: #666;
+    opacity: 0;
+    /* opcity0 0이면 투명 */
+}
+
+.promd-innd > a> .arrow{
+    display: block;
+    width: 25px;
+    background-color: #666;
+    position: absolute;
+}
+
+/* ================================================================ */
+.blog_style{
+    
+    padding-bottom: 15px;
+    padding:  10px;
+    border: 1px solid black;
+    
+    overflow:hidden;
+    text-align: center;
+    position: relative; 
+    box-sizing: border-box;
+}
+.col{
+    padding:  10px;
+}
+.blog-info>ul >li {
+}
+.col .bolg-hover{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    background-color: rgba(0,0,0,.8);
+    opacity: 0;
+}
+
+.col .bolg-hover  a{
+    color: crimson;
+    display: block;
+    width: 100%;
+    height: 100%;    
+}
+
+.col .blog-info p{
+    float: right;
+}
+.col .blog-info ul i{
+    color: gold;
+    float: left;
+}
+
+.col .bolg-hover:hover{
+    opacity: 1;
+}
+
+@media(min-width:1200px)
+{
+    .blog_style >li[class*="col-"]{
+        width:20%;
+    }
 }
