--- a/CSS09디자인실습/board.css
+++ b/CSS09디자인실습/board.css
@@ -1,4 +1,6 @@
- .prod-color>ul{
+ .prod-list{margin-bottom: 20px;}
+ 
+.prod_color>ul{
    overflow: hidden;
 }
 
@@ -6,7 +8,9 @@
     width: 50px;
     float: left;
 }
-
+.prod-list{
+    overflow: hidden;
+}
 .prod-content{
     overflow: hidden;
     padding: 15px 0px;
@@ -25,4 +29,13 @@
 
 .prod-img>img{
     width: 100%;
+}
+
+.prod-list:hover > .prod_color{
+    transition:  all 0.5s ease-in-out;
+    opacity: 1;
+}
+
+.prod_color{
+    opacity: 0;
 }
